# detector-de-linea

puzzlebot_line_follower/: package.xml  setup.py
puzzlebot_line_follower/launch/: line_follow.launch.py
puzzlebot_line_follower/params/: line_follower_params.yaml
puzzlebot_line_follower/puzzlebot_line_follower/: line_follower_controller.py  line_light_detector.py  yolov8_detector.py
