<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>puzzlebot_line_follower</name>
  <version>0.1.0</version>
  <description>
    Line follower and traffic light detection for Puzzlebot using ROS 2, OpenCV and ONNX.
  </description>
  <maintainer email="jp@todo.todo">jp</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencias en tiempo de ejecución -->
  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Para poder usar launch files en Python -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Dependencias de tests -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
